Fix overflow

--- a/css/basic.less
+++ b/css/basic.less
@@ -9,8 +9,8 @@
  */
 
 html {
-    overflow-x: auto;
-    overflow-y: scroll;
+    // overflow-x: auto;
+    // overflow-y: scroll;
 }
 html,
 body {
@@ -304,7 +304,7 @@ kbd {
     // border-radius: 2px;
 }
 pre {
-    overflow: auto;
+    // overflow: auto;
     word-wrap: normal;
     // border-radius: 2px;
     // box-shadow: inset 0 0 .5em @ini_border;
